Fix the scrollbar being incorrectly placed for the browsers

--- a/app/views/css/style.css
+++ b/app/views/css/style.css
@@ -148,3 +148,7 @@ sync-browser-window input:focus {
 sync-browser-window webview {
     flex: 1;
 }
+
+#browser-holder {
+    flex: 1;
+}
